indus/test/test_examples/type_errors/list_push.tpc
init {
    bool[10] x = [true, false]; 
    x.push(1);
} 
telemetry {} 
check {}